[MDC-654] simetbox-openwrt-simet-nping: install as simet-nping
Install the binary as simet-nping instead of nping, so as not to
conflict with the standard OpenWRT nping package.  This will also
make it harder to get the tracefilter to try to run an unpatched
nping (which would cause erroneous results).

--- a/simetbox-openwrt-simet-nping/Makefile
+++ b/simetbox-openwrt-simet-nping/Makefile
@@ -61,7 +61,7 @@ CONFIGURE_VARS += \
 # use setcap cap_net_raw+ep instead, but that would add an extra dependency
 define Package/simet-nping/install
 	$(INSTALL_DIR) $(1)/usr/bin
-	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/usr/bin/nping $(1)/usr/bin/
+	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/usr/bin/nping $(1)/usr/bin/simet-nping
 	chmod -R og-w files/ && $(CP) files/. $(1)/
 endef
 
