[MDC-654] simetbox-openwrt-simet-nping: pull in pcre, zlib
We need to explicitly pull in pcre and zlib, since the nmap build system
is also building nmap.  This was indirectly taken care of on the full
nmap suite by build ordering.

--- a/simetbox-openwrt-simet-nping/Makefile
+++ b/simetbox-openwrt-simet-nping/Makefile
@@ -17,7 +17,7 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=nmap
 PKG_VERSION:=7.70
-PKG_RELEASE:=100
+PKG_RELEASE:=101
 PKG_MAINTAINER:=SIMET <medicoes@simet.nic.br>
 
 PKG_SOURCE:=nmap-$(PKG_VERSION).tar.bz2
@@ -29,6 +29,9 @@ PKG_LICENSE_FILES:=COPYING
 PKG_INSTALL:=1
 
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(BUILD_VARIANT)/$(PKG_NAME)-$(PKG_VERSION)
+
+# because we do build nmap, even if we only take nping
+PKG_BUILD_DEPENDS:=pcre zlib
 
 include $(INCLUDE_DIR)/package.mk
 
